--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <html>
 <head>
+<title>WWW.google.com</title>
 </head>
+<body>
+<table Border=1 cellspacing=1 cellpadding=5>
+<tr>
+<td>5</td><td>10</td><td>15</td>
+</tr>
+<tr>
+<td>20</td><td>25</td><td>30</td>
+</tr>
+<tr>
+<td>35</td><td>40</td><td>45</td>
+</tr>
+<tr>
+<td>50</td><td>55</td><td>60</td>
+</tr>
+</table>
+</body>
 </html>
